--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 fastapi==0.88.0
 pytest==7.1.3
+pytest-asyncio==0.21.1
 uvicorn==0.20.0
 sqlalchemy==2.0.7
+aiosqlite==0.19.0
+httpx==0.25.1
 psycopg2-binary~=2.9.3
 python-dotenv
 pre-commit
-tzdata
