--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,6 +2,8 @@ name: Python package and Keep Alive
 
 on: 
   push:
+    branches:
+      - main
   schedule:
     - cron: '*/10 * * * *'
   workflow_dispatch:
@@ -11,10 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     steps:
+      - name: Print Debug Info
+        run: |
+          echo "Event Name: ${{ github.event_name }}"
+          echo "Current UTC Time: $(date -u)"
       - name: Send GET request
         run: |
           curl https://rey-and-finns-potion-shop.onrender.com/
-  
+
   build:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
